--- a/lapzone/shop/templates/shop/home.html
+++ b/lapzone/shop/templates/shop/home.html
@@ -1,15 +1,19 @@
-{% extends '_base.html' %} {% load static %} {% block title %}Home{% endblock %}
-{% block content_title %}Home page{% endblock %} {% block styles %}
-<style>
-	.my-carousel .carousel-item img {
-		max-height: 70vh;
-	}
+{% extends '_base.html' %} 
+{% load static %} 
 
-	.white-space-nowrap {
-		white-space: nowrap;
-	}
+{% block title %}Home{% endblock %}
+{% block content_title %}Home page{% endblock %} 
+
+{% block styles %}
+<style>
+	.my-carousel .carousel-item img { max-height: 70vh; }
+
+	.white-space-nowrap { white-space: nowrap; }
 </style>
-{% endblock styles %} {% block content %}
+{% endblock styles %} 
+
+
+{% block content %}
 <div class="row min-vh-100 px-3 d-flex justify-content-between">
 	<div class="min-vh-100 panel-bg-color col-12 p-0">
 		<!-- Carousel - start -->
@@ -66,7 +70,7 @@
 				</a>
 				{% for category in categories %}
 				<a
-					href="{% url 'shop:category' category.slug %}"
+					href="{{ category.get_absolute_url }}"
 					class="btn btn-dark d-inline-block border-1 border-light me-2 fs-6 px-4 py-2"
 				>
 					{{ category.name }}
@@ -78,7 +82,7 @@
 			<div class="white-space-nowrap overflow-auto">
 				{% for brand in brands %}
 				<a
-					href="{% url 'shop:brand' brand.slug %}"
+					href="{{ brand.get_absolute_url }}"
 					class="btn btn-dark d-inline-block border-1 border-light me-2 fs-6 px-4 py-2"
 				>
 					{{ brand.name }}
@@ -108,7 +112,10 @@
 		</div>
 	</div>
 </div>
-{% endblock content %} {% block scripts %}
+{% endblock content %} 
+
+
+{% block scripts %}
 <!-- Script to add "active" class selector for first carousel item -->
 <script>
 	let first_carousel_image = document.querySelectorAll(".carousel-item")[0];
