--- a/lapzone/templates/_base.html
+++ b/lapzone/templates/_base.html
@@ -191,9 +191,12 @@
 			<main>
 				<div class="container-fluid">
 					<div class="row">
-						<h2 class="my-4">
+						<h2 class="mt-4 mb-3">
 							{% block content_title %}{% endblock %}
 						</h2>
+                        {% block messages %}
+                        <div>{% include 'utils/_messages.html' %}</div> 
+                        {% endblock messages %} 
 					</div>
 					{% block content %}{% endblock %}
 				</div>
