--- a/lapzone/static/css/general.css
+++ b/lapzone/static/css/general.css
@@ -134,13 +134,15 @@ main { flex: 1 1 auto; }
     border-radius: 10px;
     margin: 30px 0 30px auto;
     width: 50px; height: 50px;
-    right: 30px; bottom: 30px;
+    right: 30px; bottom: 75px;
     display: none; /* Hidden by default */
 
     color: white;
     background-color: var(--bs-dark);
 }
 #go-to-top-btn ion-icon { font-size: 1.5em; }
+
+.grecaptcha-badge { bottom: 0px!important; }
 
 /* Footer styles */
 
@@ -150,7 +152,5 @@ main { flex: 1 1 auto; }
 }
 
 @media screen and (max-width: 768px) { /* Bootstrap5 .md breakpoint */
-    #navbarSupportedContent {
-        padding: 15px 0 15px 15px;
-    }
+    #navbarSupportedContent { padding: 15px 0 15px 15px; }
 }
