--- a/lapzone/templates/_base.html
+++ b/lapzone/templates/_base.html
@@ -334,8 +334,8 @@
 		></script>
 
 		<!-- My scripts -->
-		<script src="{% static 'js/go_to_top_btn.js' %} "></script>
-		<script src="{% static 'js/toggle_theme.js' %} "></script>
+		<script src="{% static 'js/go_to_top_btn.js' %} " defer></script>
+		<script src="{% static 'js/toggle_theme.js' %} " defer></script>
 
 		{% block scripts %}{% endblock %}
 	</body>
