--- a/lapzone/shop/templates/shop/product_list.html
+++ b/lapzone/shop/templates/shop/product_list.html
@@ -31,6 +31,7 @@
         margin-left: 20px;
         margin-right: 0px;
     }
+
     @media screen and (max-width: 992px) { /* Bootstrap5 .lg breakpoint */
         #products { margin-left: 0px; }
     }
@@ -124,9 +125,9 @@
                 </ul>
             </div>
             {% for product in page_obj %}
-            <div class="col-lg-4 col-md-6 col-sm-12">
-                <div class="product rounded mb-3">
-                    <div class="product__image w-100 d-flex justify-content-center align-items-center">
+            <div class="col-lg-4 col-md-6 col-sm-12 d-flex align-items-stretch">
+                <div class="product w-100 d-flex flex-column justify-content-between rounded mb-3">
+                    <div class="product__image w-100 mb-2">
                         <a 
                             class="w-100 opacity-1"
                             href="{{ product.get_absolute_url }}" 
@@ -138,20 +139,18 @@
                             />
                         </a>
                     </div>
-                    <div class="product__details">
+                    <div class="product__details mb-3">
                         <hr class="table-group-divider" />
                         <h4 class="mb-2 product__title">
-                            <a 
+                            <a
                                 class="text-decoration-none text-center"
-                                href="{{ product.get_absolute_url }}" 
+                                href="{{ product.get_absolute_url }}"
                             >
                                 {{ product.name |truncatechars:30 }}
                             </a>
                         </h4>
                         <hr class="table-group-divider" />
-                        <p>
-                            <h3 class="d-inline"><b>{{ product.price }}$</b></h3>
-                        </p>
+                        <h3><b>{{ product.price }}$</b></h3>
                     </div>
                     <div class="product__buttons d-flex justify-content-between">
                         <a href="#" class="btn btn-danger me-auto">
