FEAT: Redefine templates/account/account_inactive.html

--- a/lapzone/templates/account/account_inactive.html
+++ b/lapzone/templates/account/account_inactive.html
@@ -1,11 +1,9 @@
 {% extends "account/base.html" %}
 
-{% load i18n %}
+{% block title %}Account Inactive{% endblock %} 
+{% block content_title %}Account Inactive{% endblock %}
 
-{% block head_title %}{% trans "Account Inactive" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Account Inactive" %}</h1>
-
-<p>{% trans "This account is inactive." %}</p>
+    {% include 'utils/_alert.html' with message="This account is inactive." category="warning" dismissible=False only %}
 {% endblock %}
