--- a/lapzone/templates/account/email_confirm.html
+++ b/lapzone/templates/account/email_confirm.html
@@ -1,31 +1,38 @@
 {% extends "account/base.html" %}
-
-{% load i18n %}
 {% load account %}
 
-{% block head_title %}{% trans "Confirm E-mail Address" %}{% endblock %}
+{% block title %}Confirm E-mail Address{% endblock %} 
+{% block content_title %}Confirm E-mail Address{% endblock %} 
 
 
 {% block content %}
-<h1>{% trans "Confirm E-mail Address" %}</h1>
+<div class="row px-3">
+    <div class="panel-bg-color col-12 py-3 px-2">
+    {% if confirmation %}
+        {% user_display confirmation.email_address.user as user_display %}
 
-{% if confirmation %}
+        <p>
+			{% with email=confirmation.email_address.email %} 
+            Please confirm that <a href="mailto:{{ email }}">{{ email }}</a> is an e-mail
+			address for user {{ user_display }}.
+            {% endwith %}
+		</p>
 
-{% user_display confirmation.email_address.user as user_display %}
-
-<p>{% blocktrans with confirmation.email_address.email as email %}Please confirm that <a href="mailto:{{ email }}">{{ email }}</a> is an e-mail address for user {{ user_display }}.{% endblocktrans %}</p>
-
-<form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
-{% csrf_token %}
-    <button type="submit">{% trans 'Confirm' %}</button>
-</form>
-
-{% else %}
-
-{% url 'account_email' as email_url %}
-
-<p>{% blocktrans %}This e-mail confirmation link expired or is invalid. Please <a href="{{ email_url }}">issue a new e-mail confirmation request</a>.{% endblocktrans %}</p>
-
-{% endif %}
-
-{% endblock %}
+		<form
+			method="post"
+			action="{% url 'account_confirm_email' confirmation.key %}"
+		>
+			{% csrf_token %}
+			<button type="submit">Confirm</button>
+		</form>
+	{% else %}
+		<p>
+			This e-mail confirmation link expired or is invalid. Please
+			<a href="{% url 'account_email' %}">
+                issue a new e-mail confirmation request
+            </a>.
+		</p>
+    {% endif %}
+    </div>
+</div>
+{% endblock content %}
