--- a/lapzone/templates/account/login.html
+++ b/lapzone/templates/account/login.html
@@ -1,47 +1,67 @@
 {% extends "account/base.html" %}
-
-{% load i18n %}
 {% load account socialaccount %}
 
+{% block title %}Sign In{% endblock %} 
+{% block content_title %}Sign In{% endblock %}
 
-{% block head_title %}{% trans "Sign In" %}{% endblock %}
+{% block styles %}
+{{ block.super }}
+
+<style>
+    label[for="id_remember"] { display: inline-block; }
+</style>
+{% endblock styles %} 
+
+
 {% block content %}
+<div class="row px-3 mb-5">
+    <div class="panel-bg-color col-12 py-3 px-1">
+        {% get_providers as socialaccount_providers %}
 
-    <h1>{% trans "Sign In" %}</h1>
+        {% if socialaccount_providers %}
+            <p>
+                Please sign in with one of your existing third party accounts. Or,
+                <a href="{{ signup_url }}">sign up</a>
+                for a {{ site.name }} account and sign in below:
+            </p>
 
-    {% get_providers as socialaccount_providers %}
+            <div class="socialaccount_ballot">
+                <ul class="socialaccount_providers">
+                    {% include "socialaccount/snippets/provider_list.html" with process="login" %}
+                </ul>
+                <div class="login-or">or</div>
+            </div>
 
-    {% if socialaccount_providers %}
-        <p>{% blocktrans with site.name as site_name %}Please sign in with one
-            of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
-            for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
-
-        <div class="socialaccount_ballot">
-
-            <ul class="socialaccount_providers">
-                {% include "socialaccount/snippets/provider_list.html" with process="login" %}
-            </ul>
-
-            <div class="login-or">{% trans 'or' %}</div>
-
-        </div>
-
-        {% include "socialaccount/snippets/login_extra.html" %}
-
-    {% else %}
-        <p>{% blocktrans %}If you have not created an account yet, then please
-            <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
-    {% endif %}
-
-    <form class="login" method="POST" action="{% url 'account_login' %}">
-        {% csrf_token %}
-        {{ form.as_p }}
-        {% if redirect_field_value %}
-            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
+            {% include "socialaccount/snippets/login_extra.html" %}
+        {% else %}
+            <p>
+                If you have not created an account yet, then please
+                <a href="{{ signup_url }}">sign up</a> first.
+            </p>
         {% endif %}
-        <a class="button secondaryAction"
-           href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-        <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
-    </form>
 
-{% endblock %}
+        <form class="login" method="POST" action="">
+            {% csrf_token %}
+            {{ form.as_p }}
+
+            {% if redirect_field_value %}
+                <input 
+                    type="hidden" 
+                    name="{{ redirect_field_name }}" 
+                    value="{{ redirect_field_value }}"
+                />
+            {% endif %}
+
+            <a 
+                class="forgot-password d-block" 
+                href="{% url 'account_reset_password' %}"
+            >
+                Forgot Password?
+            </a>
+            <button class="btn btn-success btn-lg d-block mt-3" type="submit">
+                Sign In
+            </button>
+        </form>
+    </div>
+</div>
+{% endblock content %}
