--- a/lapzone/templates/account/signup_closed.html
+++ b/lapzone/templates/account/signup_closed.html
@@ -1,11 +1,9 @@
 {% extends "account/base.html" %}
 
-{% load i18n %}
+{% block title %}Sign Up Closed{% endblock %} 
+{% block content_title %}Sign Up Closed{% endblock %}
 
-{% block head_title %}{% trans "Sign Up Closed" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Sign Up Closed" %}</h1>
-
-<p>{% trans "We are sorry, but the sign up is currently closed." %}</p>
+    {% include 'utils/_alert.html' with message="We are sorry, but the sign up is currently closed." category="warning" dismissible=False only %}
 {% endblock %}
