--- a/lapzone/templates/account/signup.html
+++ b/lapzone/templates/account/signup.html
@@ -1,21 +1,34 @@
 {% extends "account/base.html" %}
 
-{% load i18n %}
+{% block title %}Signup{% endblock %} 
+{% block content_title %}Sign Up{% endblock %} 
 
-{% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Sign Up" %}</h1>
+<div class="row px-3 mb-5">
+    <div class="panel-bg-color col-12 py-3 px-1">
+        <p>
+            Already have an account? 
+            Then please <a href="{{ login_url }}">sign in</a>.
+        </p>
 
-<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
+        <form class="signup" id="signup_form" method="post" action="">
+            {% csrf_token %}
 
-<form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <button type="submit">{% trans "Sign Up" %} &raquo;</button>
-</form>
+            {{ form.as_p }}
 
-{% endblock %}
+            {% if redirect_field_value %}
+            <input 
+                type="hidden" 
+                name="{{ redirect_field_name }}" 
+                value="{{ redirect_field_value }}" 
+            />
+            {% endif %}
+
+            <button class="btn btn-success btn-lg d-block mt-3" type="submit">
+                Sign Up &raquo;
+            </button>
+        </form>
+    </div>
+</div>
+{% endblock content %}
