--- a/lapzone/templates/account/verification_sent.html
+++ b/lapzone/templates/account/verification_sent.html
@@ -1,12 +1,10 @@
 {% extends "account/base.html" %}
 
-{% load i18n %}
+{% block title %}Verify Your E-mail Address{% endblock %} 
+{% block content_title %}Verify Your E-mail Address{% endblock %}
 
-{% block head_title %}{% trans "Verify Your E-mail Address" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Verify Your E-mail Address" %}</h1>
-
-    <p>{% blocktrans %}We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
-
+    {% include 'utils/_alert.html' with message="We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process. Please contact us if you do not receive it within a few minutes." category="primary" dismissible=False only %}
 {% endblock %}
+
