--- a/lapzone/templates/account/verified_email_required.html
+++ b/lapzone/templates/account/verified_email_required.html
@@ -1,23 +1,25 @@
 {% extends "account/base.html" %}
 
-{% load i18n %}
+{% block title %}Verify Your E-mail Address{% endblock %} 
 
-{% block head_title %}{% trans "Verify Your E-mail Address" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Verify Your E-mail Address" %}</h1>
-
-{% url 'account_email' as email_url %}
-
-<p>{% blocktrans %}This part of the site requires us to verify that
-you are who you claim to be. For this purpose, we require that you
-verify ownership of your e-mail address. {% endblocktrans %}</p>
-
-<p>{% blocktrans %}We have sent an e-mail to you for
-verification. Please click on the link inside this e-mail. Please
-contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
-
-<p>{% blocktrans %}<strong>Note:</strong> you can still <a href="{{ email_url }}">change your e-mail address</a>.{% endblocktrans %}</p>
-
-
-{% endblock %}
+<div class="alert alert-warning mb-5" role="alert">
+	<h4 class="alert-heading">Verify Your E-mail Address</h4>
+	<p>
+		This part of the site requires us to verify that you are who you claim
+		to be. For this purpose, we require that you verify ownership of your
+		e-mail address.
+	</p>
+	<p>
+		We have sent an e-mail to you for verification. Please click on the link
+		inside this e-mail. Please contact us if you do not receive it within a
+		few minutes.
+	</p>
+	<hr />
+	<p class="mb-0">
+		<strong>Note:</strong> you can still
+		<a href="{% url 'account_email' %}">change your e-mail address</a>.
+	</p>
+</div>
+{% endblock content %}
