--- a/lapzone/templates/account/password_set.html
+++ b/lapzone/templates/account/password_set.html
@@ -1,15 +1,24 @@
 {% extends "account/base.html" %}
 
-{% load i18n %}
+{% block title %}Set Password{% endblock %} 
+{% block content_title %}Set Password{% endblock %} 
 
-{% block head_title %}{% trans "Set Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Set Password" %}</h1>
+<div class="row px-3 mb-5">
+    <div class="panel-bg-color col-12 py-3 px-1">
+        <form method="POST" action="">
+            {% csrf_token %}
 
-    <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" name="action" value="{% trans 'Set Password' %}"/>
-    </form>
-{% endblock %}
+            {{ form.as_p }}
+
+            <input 
+                type="submit" 
+                name="action" 
+                value="Set Password"
+                class="btn btn-success btn-lg mt-3"
+            />
+        </form>
+    </div>
+</div>
+{% endblock content %}
