--- a/lapzone/templates/account/password_reset.html
+++ b/lapzone/templates/account/password_reset.html
@@ -1,24 +1,37 @@
 {% extends "account/base.html" %}
-
-{% load i18n %}
 {% load account %}
 
-{% block head_title %}{% trans "Password Reset" %}{% endblock %}
+{% block title %}Password Reset{% endblock %} 
+{% block content_title %}Password Reset{% endblock %} 
+
 
 {% block content %}
-
-    <h1>{% trans "Password Reset" %}</h1>
+<div class="row px-3 mb-5">
+    <div class="panel-bg-color col-12 py-3 px-1">
     {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
+        {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
 
-    <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
+		<p>
+			Forgotten your password? Enter your e-mail address below, and we'll
+			send you an e-mail allowing you to reset it.
+		</p>
 
-    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="{% trans 'Reset My Password' %}" />
-    </form>
+		<form method="POST" action="" class="password_reset">
+			{% csrf_token %} 
+            
+            {{ form.as_p }}
 
-    <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
-{% endblock %}
+			<input 
+                type="submit" 
+                value="Reset My Password" 
+                class="btn btn-success btn-lg mt-3" 
+            />
+		</form>
+
+		<p>
+			Please contact us if you have any trouble resetting your password.
+		</p>
+	</div>
+</div>
+{% endblock content %}
