FEAT: Redefine templates/account/password_change.html

--- a/lapzone/templates/account/password_change.html
+++ b/lapzone/templates/account/password_change.html
@@ -1,15 +1,25 @@
 {% extends "account/base.html" %}
 
-{% load i18n %}
+{% block title %}Change Password{% endblock %} 
+{% block content_title %}Change Password{% endblock %} 
 
-{% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Change Password" %}</h1>
+<div class="row px-3 mb-5">
+    <div class="panel-bg-color col-12 py-3 px-1">
+        <form method="POST" action="" class="password_change">
+            {% csrf_token %}
 
-    <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" name="action">{% trans "Change Password" %}</button>
-    </form>
-{% endblock %}
+            {{ form.as_p }}
+
+            <button 
+                type="submit" 
+                name="action"
+                class="btn btn-success btn-lg mt-3"
+            >
+                Change Password
+            </button>
+        </form>
+    </div>
+</div>
+{% endblock content %}
