--- a/lapzone/templates/account/password_reset_done.html
+++ b/lapzone/templates/account/password_reset_done.html
@@ -1,16 +1,21 @@
 {% extends "account/base.html" %}
-
-{% load i18n %}
 {% load account %}
 
-{% block head_title %}{% trans "Password Reset" %}{% endblock %}
+{% block title %}Password Reset{% endblock %}
+{% block content_title %}Password Reset{% endblock %}
+
 
 {% block content %}
-    <h1>{% trans "Password Reset" %}</h1>
-    
+<div class="row px-3 mb-5">
+    <div class="panel-bg-color col-12 py-3 px-1">
     {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
+        {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
-    
-    <p>{% blocktrans %}We have sent you an e-mail. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
-{% endblock %}
+
+		<p>
+			We have sent you an e-mail. Please contact us if you do not receive
+			it within a few minutes.
+		</p>
+	</div>
+</div>
+{% endblock content %}
