--- a/lapzone/templates/account/password_reset_from_key.html
+++ b/lapzone/templates/account/password_reset_from_key.html
@@ -1,23 +1,40 @@
 {% extends "account/base.html" %}
 
-{% load i18n %}
-{% block head_title %}{% trans "Change Password" %}{% endblock %}
+{% block title %}Change Password{% endblock %}
+ 
+{% block content_title %}
+{% if token_fail %}Bad Token{% else %}Change Password{% endif %}
+{% endblock %} 
+
 
 {% block content %}
-    <h1>{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h1>
-
+<div class="row px-3 mb-5">
+    <div class="panel-bg-color col-12 py-3 px-1">
     {% if token_fail %}
-        {% url 'account_reset_password' as passwd_reset_url %}
-        <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
+        <p>
+            The password reset link was invalid, possibly because it has already been
+            used. Please request a
+            <a href="{% url 'account_reset_password' %}">new password reset</a>.
+        </p>
     {% else %}
         {% if form %}
             <form method="POST" action="{{ action_url }}">
                 {% csrf_token %}
+
                 {{ form.as_p }}
-                <input type="submit" name="action" value="{% trans 'change password' %}"/>
+
+                <input 
+                    type="submit" 
+                    name="action" 
+                    value="Change password" 
+                    class="btn btn-success btn-lg mt-3"
+                />
             </form>
         {% else %}
-            <p>{% trans 'Your password is now changed.' %}</p>
+            <p>Your password is now changed.</p>
         {% endif %}
     {% endif %}
-{% endblock %}
+    </div>
+</div>
+{% endblock content %}
+
