FEAT: Redefine templates/account/password_reset_from_key_done.html

--- a/lapzone/templates/account/password_reset_from_key_done.html
+++ b/lapzone/templates/account/password_reset_from_key_done.html
@@ -1,9 +1,9 @@
 {% extends "account/base.html" %}
 
-{% load i18n %}
-{% block head_title %}{% trans "Change Password" %}{% endblock %}
+{% block title %}Change Password{% endblock %} 
+{% block content_title %}Change Password{% endblock %}
+
 
 {% block content %}
-    <h1>{% trans "Change Password" %}</h1>
-    <p>{% trans 'Your password is now changed.' %}</p>
+    {% include 'utils/_alert.html' with message="Your password is now changed." category="warning" dismissible=False only %}
 {% endblock %}
