--- a/lapzone/templates/account/base.html
+++ b/lapzone/templates/account/base.html
@@ -1,1 +1,22 @@
 {% extends "_base.html" %}
+
+{% block styles %}
+<style>
+    label { display: block; }
+    
+    .form-control { width: 50%; }
+
+    @media screen and (max-width: 576px) { /* Bootstrap5 .sm breakpoint */
+        .form-control { width: 100%; }
+    }
+</style>
+{% endblock styles %} 
+
+{% block scripts %}
+<script defer>
+    for (const field of document.querySelectorAll("input")) {
+        if (field.type != "checkbox")
+            field.classList.add("form-control")
+    }
+</script>
+{% endblock scripts %} 
