STYLE: Change some styles in templates/account/
Add or change some Bootstrap5 classes for padding and margin
Replace input:submit with button:submit
...

--- a/lapzone/templates/account/password_reset.html
+++ b/lapzone/templates/account/password_reset.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 <div class="row px-3 mb-5">
-    <div class="panel-bg-color col-12 py-3 px-1">
+    <div class="panel-bg-color col-12 p-3">
     {% if user.is_authenticated %}
         {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
@@ -22,11 +22,9 @@
             
             {{ form.as_p }}
 
-			<input 
-                type="submit" 
-                value="Reset My Password" 
-                class="btn btn-success btn-lg mt-3" 
-            />
+            <button type="submit" class="btn btn-success btn-lg my-3">
+                Reset My Password
+            </button>
 		</form>
 
 		<p>
