--- a/lapzone/templates/account/password_reset_done.html
+++ b/lapzone/templates/account/password_reset_done.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 <div class="row px-3 mb-5">
-    <div class="panel-bg-color col-12 py-3 px-1">
+    <div class="panel-bg-color col-12 p-3">
     {% if user.is_authenticated %}
         {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
