--- a/lapzone/templates/account/password_set.html
+++ b/lapzone/templates/account/password_set.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 <div class="row px-3 mb-5">
-    <div class="panel-bg-color col-12 py-3 px-1">
+    <div class="panel-bg-color col-12 p-3">
         <form method="POST" action="">
             {% csrf_token %}
 
