--- a/lapzone/templates/account/verified_email_required.html
+++ b/lapzone/templates/account/verified_email_required.html
@@ -4,7 +4,7 @@
 
 
 {% block content %}
-<div class="alert alert-warning mb-5" role="alert">
+<div class="alert alert-warning m-3" role="alert">
 	<h4 class="alert-heading">Verify Your E-mail Address</h4>
 	<p>
 		This part of the site requires us to verify that you are who you claim
