--- a/lapzone/templates/account/email.html
+++ b/lapzone/templates/account/email.html
@@ -1,17 +1,17 @@
 {% extends "account/base.html" %}
 {% load account %}
 
-{% block title %}Account{% endblock %} 
+{% block title %}E-mail Addresses{% endblock %} 
 {% block content_title %}E-mail Addresses{% endblock %} 
 
 
 {% block content %}
-<div class="row px-3">
-    <div class="panel-bg-color col-12 py-3 px-1">
+<div class="row px-3 mb-5">
+    <div class="panel-bg-color col-12 p-3">
     {% if user.emailaddress_set.all %}
         <p>The following e-mail addresses are associated with your account:</p>
 
-        <form action="{% url 'account_email' %}" class="email_list" method="post">
+        <form action="" class="email_list" method="post">
             {% csrf_token %}
             <fieldset class="blockLabels">
 
@@ -45,13 +45,25 @@
             {% endfor %}
 
                 <div class="buttonHolder">
-                    <button class="secondaryAction" type="submit" name="action_primary">
+                    <button
+                        type="submit"
+                        name="action_primary"
+                        class="secondaryAction btn btn-primary btn-lg me-2 mb-2"
+                    >
                         Make Primary
                     </button>
-                    <button class="secondaryAction" type="submit" name="action_send">
+                    <button
+                        type="submit"
+                        name="action_send"
+                        class="secondaryAction btn btn-secondary btn-lg me-2 mb-2"
+                    >
                         Re-send Verification
                     </button>
-                    <button class="primaryAction" type="submit" name="action_remove">
+                    <button
+                        type="submit"
+                        name="action_remove"
+                        class="primaryAction btn btn-danger btn-lg mb-2"
+                    >
                         Remove
                     </button>
                 </div>
@@ -69,8 +81,16 @@
 
         <form method="post" action="{% url 'account_email' %}" class="add_email">
             {% csrf_token %}
+
             {{ form.as_p }}
-            <button name="action_add" type="submit">Add E-mail</button>
+
+            <button 
+                name="action_add" 
+                type="submit" 
+                class="btn btn-success btn-lg mt-3"
+            >
+                Add E-mail
+            </button>
         </form>
     </div>
 </div>
@@ -78,6 +98,8 @@
 
 
 {% block scripts %}
+{{ block.super }}
+
 <script type="text/javascript">
 	(function () {
 		const message =
