--- a/lapzone/templates/account/email_confirm.html
+++ b/lapzone/templates/account/email_confirm.html
@@ -6,8 +6,8 @@
 
 
 {% block content %}
-<div class="row px-3">
-    <div class="panel-bg-color col-12 py-3 px-2">
+<div class="row px-3 mb-5">
+    <div class="panel-bg-color col-12 p-3">
     {% if confirmation %}
         {% user_display confirmation.email_address.user as user_display %}
 
@@ -23,7 +23,10 @@
 			action="{% url 'account_confirm_email' confirmation.key %}"
 		>
 			{% csrf_token %}
-			<button type="submit">Confirm</button>
+
+			<button type="submit" class="btn btn-success btn-lg my-3">
+                Confirm
+            </button>
 		</form>
 	{% else %}
 		<p>
