--- a/lapzone/templates/account/login.html
+++ b/lapzone/templates/account/login.html
@@ -15,7 +15,7 @@
 
 {% block content %}
 <div class="row px-3 mb-5">
-    <div class="panel-bg-color col-12 py-3 px-1">
+    <div class="panel-bg-color col-12 p-3">
         {% get_providers as socialaccount_providers %}
 
         {% if socialaccount_providers %}
