--- a/lapzone/templates/account/password_reset_from_key.html
+++ b/lapzone/templates/account/password_reset_from_key.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 <div class="row px-3 mb-5">
-    <div class="panel-bg-color col-12 py-3 px-1">
+    <div class="panel-bg-color col-12 p-3">
     {% if token_fail %}
         <p>
             The password reset link was invalid, possibly because it has already been
