--- a/lapzone/templates/socialaccount/signup.html
+++ b/lapzone/templates/socialaccount/signup.html
@@ -1,22 +1,35 @@
 {% extends "socialaccount/base.html" %}
 
-{% load i18n %}
+{% block title %}Signup{% endblock %} 
+{% block content_title %}Sign Up{% endblock %} 
 
-{% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Sign Up" %}</h1>
+<div class="row px-3 mb-5">
+    <div class="panel-bg-color col-12 py-3 px-3">
+        <p>
+			You are about to use your {{account.get_provider.name}} account to
+			login to {{site.name}}. As a final step, please complete the
+			following form:
+		</p>
+            
+        <form class="signup" id="signup_form" method="post" action="">
+            {% csrf_token %}
 
-<p>{% blocktrans with provider_name=account.get_provider.name site_name=site.name %}You are about to use your {{provider_name}} account to login to
-{{site_name}}. As a final step, please complete the following form:{% endblocktrans %}</p>
+            {{ form.as_p }}
 
-<form class="signup" id="signup_form" method="post" action="{% url 'socialaccount_signup' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <button type="submit">{% trans "Sign Up" %} &raquo;</button>
-</form>
+            {% if redirect_field_value %}
+            <input 
+                type="hidden" 
+                name="{{ redirect_field_name }}" 
+                value="{{ redirect_field_value }}" 
+            />
+            {% endif %}
 
-{% endblock %}
+            <button type="submit" class="btn btn-success btn-lg mt-3">
+                Sign Up &raquo;
+            </button>
+        </form>
+    </div>
+</div>
+{% endblock content %}
