--- a/lapzone/templates/socialaccount/login_cancelled.html
+++ b/lapzone/templates/socialaccount/login_cancelled.html
@@ -1,15 +1,15 @@
-{% extends "socialaccount/base.html" %}
+{% extends "account/base.html" %}
 
-{% load i18n %}
+{% block title %}Login Cancelled{% endblock %}
 
-{% block head_title %}{% trans "Login Cancelled" %}{% endblock %}
 
 {% block content %}
-
-<h1>{% trans "Login Cancelled" %}</h1>
-
-{% url 'account_login' as login_url %}
-
-<p>{% blocktrans %}You decided to cancel logging in to our site using one of your existing accounts. If this was a mistake, please proceed to <a href="{{login_url}}">sign in</a>.{% endblocktrans %}</p>
-
-{% endblock %}
+<div class="alert alert-warning m-3" role="alert">
+	<h4 class="alert-heading">Login Cancelled</h4>
+	<p>
+		You decided to cancel logging in to our site using one of your existing
+		accounts. If this was a mistake, please proceed to
+		<a href="{% url 'account_login' %}">sign in</a>.
+	</p>
+</div>
+{% endblock content %}
