--- a/lapzone/templates/socialaccount/authentication_error.html
+++ b/lapzone/templates/socialaccount/authentication_error.html
@@ -1,11 +1,9 @@
-{% extends "socialaccount/base.html" %}
+{% extends "account/base.html" %}
 
-{% load i18n %}
+{% block title %}Social Network Login Failure{% endblock %} 
+{% block content_title %}Social Network Login Failure{% endblock %}
 
-{% block head_title %}{% trans "Social Network Login Failure" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Social Network Login Failure" %}</h1>
-
-<p>{% trans "An error occurred while attempting to login via your social network account." %}</p>
+    {% include 'utils/_alert.html' with message="An error occurred while attempting to login via your social network account." category="danger" dismissible=False only %}
 {% endblock %}
