STYLE: Remove useless CSS classes and id for elements
in the templates/account/ and templates/socialaccount/
Remplace <h2> with <h3> in the <main>

--- a/lapzone/templates/account/password_reset.html
+++ b/lapzone/templates/account/password_reset.html
@@ -17,7 +17,7 @@
 			send you an e-mail allowing you to reset it.
 		</p>
 
-		<form method="POST" action="" class="password_reset">
+		<form method="POST" action="">
 			{% csrf_token %} 
             
             {{ form.as_p }}
