--- a/lapzone/templates/account/email.html
+++ b/lapzone/templates/account/email.html
@@ -11,15 +11,14 @@
     {% if user.emailaddress_set.all %}
         <p>The following e-mail addresses are associated with your account:</p>
 
-        <form action="" class="email_list" method="post">
+        <form action="" method="post">
             {% csrf_token %}
-            <fieldset class="blockLabels">
 
+            <fieldset>
             {% for emailaddress in user.emailaddress_set.all %}
-                <div class="ctrlHolder">
+                <div class="mb-3">
                     <label 
-                        for="email_radio_{{forloop.counter}}" 
-                        class="{% if emailaddress.primary %}primary_email{% endif %}"
+                        for="email_radio_{{forloop.counter}}"
                     >
                         <input 
                             type="radio" 
@@ -29,40 +28,33 @@
                             {% if emailaddress.primary or user.emailaddress_set.count == 1 %}checked="checked"{% endif %} 
                         />
 
-                        {{ emailaddress.email }}
-                        
-                    {% if emailaddress.verified %}
-                        <span class="verified">Verified</span>
-                    {% else %}
-                        <span class="unverified">Unverified</span>
-                    {% endif %}
+                        {{ emailaddress.email }} - 
+                        {% if emailaddress.verified %}Verified{% else %}Unverified{% endif %}
 
-                    {% if emailaddress.primary %}
-                        <span class="primary">Primary</span>
-                    {% endif %}
+                        {% if emailaddress.primary %}: <span class="primary">Primary</span>{% endif %}
                     </label>
                 </div>
             {% endfor %}
 
-                <div class="buttonHolder">
+                <div class="mt-3">
                     <button
                         type="submit"
                         name="action_primary"
-                        class="secondaryAction btn btn-primary btn-lg me-2 mb-2"
+                        class="btn btn-primary me-2 mb-2"
                     >
                         Make Primary
                     </button>
                     <button
                         type="submit"
                         name="action_send"
-                        class="secondaryAction btn btn-secondary btn-lg me-2 mb-2"
+                        class="btn btn-secondary border border-1 me-2 mb-2"
                     >
                         Re-send Verification
                     </button>
                     <button
                         type="submit"
                         name="action_remove"
-                        class="primaryAction btn btn-danger btn-lg mb-2"
+                        class="btn btn-danger mb-2"
                     >
                         Remove
                     </button>
@@ -77,17 +69,17 @@
         </p>
     {% endif %} 
 
-        <h2 class="mt-3 mb-2">Add E-mail Address</h2>
+        <h3 class="my-3">Add E-mail Address</h3>
 
-        <form method="post" action="{% url 'account_email' %}" class="add_email">
+        <form method="post" action="">
             {% csrf_token %}
 
             {{ form.as_p }}
 
             <button 
-                name="action_add" 
                 type="submit" 
-                class="btn btn-success btn-lg mt-3"
+                name="action_add" 
+                class="btn btn-success btn-lg mt-1"
             >
                 Add E-mail
             </button>
