--- a/lapzone/templates/account/password_change.html
+++ b/lapzone/templates/account/password_change.html
@@ -7,7 +7,7 @@
 {% block content %}
 <div class="row px-3 mb-5">
     <div class="panel-bg-color col-12 p-3">
-        <form method="POST" action="" class="password_change">
+        <form method="POST" action="">
             {% csrf_token %}
 
             {{ form.as_p }}
