--- a/lapzone/templates/account/signup.html
+++ b/lapzone/templates/account/signup.html
@@ -12,7 +12,7 @@
             Then please <a href="{{ login_url }}">sign in</a>.
         </p>
 
-        <form class="signup" id="signup_form" method="post" action="">
+        <form id="signup_form" method="post" action="">
             {% csrf_token %}
 
             {{ form.as_p }}
