--- a/lapzone/templates/socialaccount/connections.html
+++ b/lapzone/templates/socialaccount/connections.html
@@ -18,7 +18,7 @@
 
             <fieldset>
             {% if form.non_field_errors %}
-                <div id="errorMsg">{{ form.non_field_errors }}</div>
+                <div>{{ form.non_field_errors }}</div>
             {% endif %}
 
             {% for base_account in form.accounts %}
@@ -32,7 +32,7 @@
                         id="id_account_{{ base_account.id }}" 
                     />
                     <span 
-                        class="socialaccount_provider {{ base_account.provider }} {{ account.get_brand.id }}"
+                        class="{{ base_account.provider }} {{ account.get_brand.id }}"
                     >
                         {{account.get_brand.name}}
                     </span>
