--- a/lapzone/templates/socialaccount/signup.html
+++ b/lapzone/templates/socialaccount/signup.html
@@ -13,7 +13,7 @@
 			following form:
 		</p>
             
-        <form class="signup" id="signup_form" method="post" action="">
+        <form id="signup_form" method="post" action="">
             {% csrf_token %}
 
             {{ form.as_p }}
